--- a/note/macos.html
+++ b/note/macos.html
@@ -55,21 +55,21 @@ gtag('config', 'UA-44534026-1');
 <section class="content">
 <header>
 <h1>macOS</h1>
-<div class="title-date">2020년 4월 24일 수정</div>
+<div class="title-date">2020년 4월 25일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org1526dad">이모티콘(Emoji) 쉽게 입력하기</a></li>
-<li><a href="#orgcdbc7e3">셸에서 iCloud Drive 접근하기</a></li>
-<li><a href="#org31d1a6a">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
+<li><a href="#orgb9262ba">이모티콘(Emoji) 쉽게 입력하기</a></li>
+<li><a href="#orgc591b11">셸에서 iCloud Drive 접근하기</a></li>
+<li><a href="#orgc2f5897">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
 </ul>
 </div>
 </div>
 <p>
 macOS 는 그 애플의 독자 OS다.
 내부는 유닉스(BSD)를 기원으로 하는 OS이며
-껍데기(?)는 전신인 NextStep 에서 많은 영향을 받은 것이 현재의 macOS 다.
+껍데기(?)는 전신인 <a href="nextstep.html">NeXTSTEP</a>에서 많은 영향을 받은 것이 현재의 macOS 다.
 </p>
 
 <p>
@@ -87,17 +87,17 @@ macOS 는 그 애플의 독자 OS다.
 아래는 macOS와 관련된 팁이다.
 </p>
 
-<div id="outline-container-org1526dad" class="outline-2">
-<h2 id="org1526dad">이모티콘(Emoji) 쉽게 입력하기</h2>
-<div class="outline-text-2" id="text-org1526dad">
+<div id="outline-container-orgb9262ba" class="outline-2">
+<h2 id="orgb9262ba">이모티콘(Emoji) 쉽게 입력하기</h2>
+<div class="outline-text-2" id="text-orgb9262ba">
 <p>
 단축키 <code>Control+Command+Space</code>
 </p>
 </div>
 </div>
-<div id="outline-container-orgcdbc7e3" class="outline-2">
-<h2 id="orgcdbc7e3">셸에서 iCloud Drive 접근하기</h2>
-<div class="outline-text-2" id="text-orgcdbc7e3">
+<div id="outline-container-orgc591b11" class="outline-2">
+<h2 id="orgc591b11">셸에서 iCloud Drive 접근하기</h2>
+<div class="outline-text-2" id="text-orgc591b11">
 <p>
 아래 디렉터리가 iCloud Drive의 위치다.
 </p>
@@ -117,9 +117,9 @@ macOS 는 그 애플의 독자 OS다.
 </p>
 </div>
 </div>
-<div id="outline-container-org31d1a6a" class="outline-2">
-<h2 id="org31d1a6a">다음으로 열기(Open with) 메뉴 초기화하기</h2>
-<div class="outline-text-2" id="text-org31d1a6a">
+<div id="outline-container-orgc2f5897" class="outline-2">
+<h2 id="orgc2f5897">다음으로 열기(Open with) 메뉴 초기화하기</h2>
+<div class="outline-text-2" id="text-orgc2f5897">
 <p>
 파인더에서 특정 파일을 오른쪽 클릭해서 나타나는 팝업 메뉴에서
 '다음으로 열기' 혹은 'Open with' 항목이
